# service-update-helper

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  update_all.py
providers/: .bazarr.py.swp  __init__.py  agentdvr.py  bazarr.py  esphome.py  homeassistant.py  pihole.py  plex.py  radarr.py  sonarr.py  zigbee2mqtt.py
service_updater/: __main__.py  service_update.py  tst_async.py
service_updater/providers/: __init__.py  agentdvr.py  bazarr.py  esphome.py  homeassistant.py  pihole.py  plex.py  radarr.py  sonarr.py  zigbee2mqtt.py
